--- a/css/patient/patient_dashboard.css
+++ b/css/patient/patient_dashboard.css
@@ -1,3 +1,9 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@500&display=swap');
+*{
+    font-family: 'Roboto', sans-serif;
+}
+
 .patient-dashboard-outer {
     width: 100%;
     height: 100vh;
@@ -11,9 +17,19 @@
     justify-content: center;
 }
 
+.fa-hospital-user{
+    font-size: 30px;
+}
+
+.tot-patients{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .inner-items {
     height: auto;
-    padding: 20px 10px;
+    padding: 40px;
 }
 
 .search-bar{
@@ -21,14 +37,15 @@
 }
 
 .table-outer {
-    height: 600px;
+    height: auto;
     overflow: scroll;
     overflow-x: hidden;
     scrollbar-width: auto;
 }
 
+
+
 .all-patients {
-    border: 1px solid black;
     border-radius: 5px;
     margin: 5px 0;
     padding: 5px 10px;
@@ -36,4 +53,11 @@
 
 .inner-items-right{
 
+}
+
+@media (max-width: 998px) {
+    .table-outer{
+        overflow-x: scroll;
+        overflow-y: scroll;
+    }
 }
