--- a/css/doctor/doctor_dashboard.css
+++ b/css/doctor/doctor_dashboard.css
@@ -1,4 +1,8 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@500&display=swap');
+*{
+    font-family: 'Roboto', sans-serif;
+}
 .doctor-form{
     border: 1px solid lightgray;
     padding: 20px 30px;
@@ -17,7 +21,9 @@
     max-height: 300px;
     margin: 50px 0;
 }
-
+.title{
+    font-weight: bold;
+}
 @media (max-width: 998px) {
     .table-outer{
         overflow-x: scroll;
